# data-science-project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  template.py
config/: config.yaml
notebooks/research/: 1_data_ingestion.ipynb  2_data_validation.ipynb  3_data_transformation.ipynb  4_model_trainer.ipynb  5_model_evaluation.ipynb  research.ipynb
src/datascience/: __init__.py
src/datascience/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/datascience/config/: configuration.py
src/datascience/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_trainer_pipeline.py
src/datascience/utils/: common.py
templates/: index.html
