[project]
name = "data-science-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ensure>=1.0.4",
    "flask>=2.3.3",
    "mlflow==2.2.2",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "python-box>=7.3.2",
    "scikit-learn>=1.7.1",
]
